--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -19,7 +19,11 @@
             </div>
             <div class="footer__links">
                 <a [routerLink]="'/about-us'" class="footer__link">About Us</a>
-                <a href="https://github.com/JuanesPachon/web-trekangle-client" target="_blank"><img class="footer__link--github" src="assets/img/github.svg" alt="Github logo"></a>
+                <div class="footer__socials">
+                    <a href="https://www.instagram.com/" target="_blank"><img class="footer__link--socials" src="assets/img/instagram.svg" alt="Instagram logo"></a>
+                    <a href="https://www.facebook.com/" target="_blank"><img class="footer__link--socials" src="assets/img/facebook.svg" alt="Facebook logo"></a>
+                    <a href="https://github.com/JuanesPachon/web-trekangle-client" target="_blank"><img class="footer__link--github" src="assets/img/github.svg" alt="Github logo"></a>
+                </div>
             </div>
         </div>
     </div>
